Fixing project icon alignment

--- a/web/wp-content/themes/lf-theme/source/scss/components/_projects.scss
+++ b/web/wp-content/themes/lf-theme/source/scss/components/_projects.scss
@@ -23,7 +23,7 @@
     text-align: center;
     margin-bottom: 1.5em;
 
-    a {
+    >a {
         width: 100px;
         height: 100px;
         display: flex;
